--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Projects</title>
+    <title>Jai Verma | Projects</title>
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -19,11 +19,11 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">YourName<span class="accent">.</span></a>
+            <a href="index.html" class="logo">Jai Verma<span class="accent">.</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html" class="active">Projects</a></li>
-                <li><a href="blog/">Blog</a></li>
+                <!-- <li><a href="blog/">Blog</a></li> -->
                 <li><a href="index.html#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -36,14 +36,17 @@
     <header class="projects-header">
         <div class="container">
             <h1>My Projects</h1>
-            <p>A collection of my data science and machine learning projects</p>
+            <p>A collection of my data analysis and visualization projects</p>
             
             <!-- Project Filters -->
             <div class="project-filters">
                 <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="machine-learning">Machine Learning</button>
-                <button class="filter-btn" data-filter="data-analysis">Data Analysis</button>
-                <button class="filter-btn" data-filter="deep-learning">Deep Learning</button>
+                <!-- <button class="filter-btn" data-filter="machine-learning">Machine Learning</button> -->
+                <button class="filter-btn" data-filter="python">Python</button>
+                <button class="filter-btn" data-filter="tableau">Tableau</button>
+                <button class="filter-btn" data-filter="powerbi">PowerBI</button>
+                <button class="filter-btn" data-filter="spss">SPSS</button>
+                <!-- <button class="filter-btn" data-filter="deep-learning">Deep Learning</button> -->
             </div>
         </div>
     </header>
@@ -53,27 +56,195 @@
         <div class="container">
             <div class="projects-grid">
                 <!-- Project Card 1 -->
-                <div class="project-card" data-category="machine-learning">
+                <div class="project-card" data-category="spss">
                     <div class="project-image">
-                        <img src="assets/images/projects/project1.jpg" alt="Project 1">
-                        <div class="project-overlay">
-                            <a href="#" class="project-link">View Project</a>
-                        </div>
+                        <img src="assets/projects/crop yield.png" alt="crop-yield-analysis">
                     </div>
                     <div class="project-content">
-                        <h3>Project Title</h3>
-                        <p>Brief description of the project and its key features. Explain the problem solved and technologies used.</p>
+                        <span> July 2024 </span>
+                        <h3>Crop Yield Data Analysis</h3>
+                        <p>Created SPSS visualizations to uncover insights from the crop yield data of India.</p>
+                        <ul>
+                            <li>
+                                Demonstrated that <strong>Kharif and Rabi</strong> crops comprise over <Strong>70%</Strong> of India's total crop production.
+                            </li>
+                            <li>
+                                Analysed a steep rise in <strong>Kerala</strong>'s crop area from <strong>1997 to 2000</strong>, then a <strong>28% decline</strong> from 2000 to 2020.
+                            </li>
+                        </ul>
                         <div class="project-tech">
-                            <span class="tech-tag">Python</span>
-                            <span class="tech-tag">TensorFlow</span>
-                            <span class="tech-tag">Scikit-learn</span>
+                            <span class="tech-tag">IBM SPSS</span>
+                            <span class="tech-tag">Microsoft Excel</span>
+                            <span class="tech-tag">Data Analysis</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank" class="btn btn-sm">
+                            <a href="https://github.com/Jai-Verma-04/Crop-yield-analysis" target="_blank" class="btn btn-sm">
                                 <i class="fab fa-github"></i> Code
                             </a>
-                            <a href="#" target="_blank" class="btn btn-sm">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            <a href="https://github.com/Jai-Verma-04/Crop-yield-analysis/blob/main/OUTPUT.pdf" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="powerbi">
+                    <div class="project-image">
+                        <img src="assets/projects/Sales Insights.png" alt="sales-insights-dashboard">
+                    </div>
+                    <div class="project-content">
+                        <span>August 2024</span>
+                        <h3>Sales Insights</h3>
+                        <p>Created a sales dashboard from MySQL database using PowerBI</p>
+                        <ul>
+                            <li>
+                                Uncovered a <strong>42.3% sales decline</strong> in three years, with a notable dip in Q2 2020.
+                            </li>
+                            <li>
+                                Showcased that <strong>Delhi NCR and Mumbai</strong> generated <strong>70% of total revenue</strong>, indicating strong market demand
+                            </li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="tech-tag">MySQL</span>
+                            <span class="tech-tag">PowerBI</span>
+                            <span class="tech-tag">Data Analysis</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Jai-Verma-04/sales-insights-dashboard" target="_blank" class="btn btn-sm">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="https://github.com/Jai-Verma-04/sales-insights-dashboard/blob/main/OUTPUT.pdf" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="tableau">
+                    <div class="project-image">
+                        <img src="assets/projects/Crime on Women.png" alt="women-crime-dashbboard">
+                    </div>
+                    <div class="project-content">
+                        <span>September 2024</span>
+                        <h3>Women Crime Dashboard</h3>
+                        <p>Created a dashboard analyzing crimes against women in India from 2001 to 2021.</p>
+                        <ul>
+                            <li>
+                                Highlighted a <strong>177% surge</strong> in <Strong>domestic violence</Strong> over two decades, with a sharp rise post-2005.
+                            </li>
+                            <li>
+                                Revealed <strong>Uttar Pradesh</strong> accounted for <strong>25% of dowry deaths</strong> by 2021, the highest in India.
+                            </li>
+                            <li>
+                                Identified <strong>Maharashtra, Karnataka, Andhra Pradesh, and Tamil Nadu</strong> as contributors to over <strong>56% of women trafficking cases</strong>.
+                            </li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="tech-tag">Tableau</span>
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">Data Analysis</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Jai-Verma-04/Women-Crime-Dashboard" target="_blank" class="btn btn-sm">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="https://public.tableau.com/app/profile/jai.verma6013/viz/CrimeonWomen/Dashboard" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="python">
+                    <div class="project-image">
+                        <img src="assets/projects/IPLAnalytica.png" alt="iplanalytica">
+                    </div>
+                    <div class="project-content">
+                        <span>October - December 2024</span>
+                        <h3>IPLAnalytica - An IPL Web App</h3>
+                        <p>Created an IPL Analytics and dashboard app to view stats for players, teams, venues and seasons with the capability of generating a scorecard.</p>
+                        <ul>
+                            <li>
+                                The project provides insights into <strong>player and team performances, match statistics</strong>, and an added functionality to <strong>generate a scorecard</strong> for a particular match.
+                            </li>
+                            <li>
+                                The project is built upon the <strong>streamlit app framework</strong> to create a web app and data analysis of the IPL data using Python's <strong>Pandas library</strong>.
+                            </li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="tech-tag">Tableau</span>
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">Data Analysis</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Jai-Verma-04/Women-Crime-Dashboard" target="_blank" class="btn btn-sm">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="https://public.tableau.com/app/profile/jai.verma6013/viz/CrimeonWomen/Dashboard" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="tableau">
+                    <div class="project-image">
+                        <img src="assets/projects/House Sales.png" alt="washington-house-sales">
+                    </div>
+                    <div class="project-content">
+                        <h3>Washington House Sales Dashboard</h3>
+                        <p>Created a dashboard analyzing Washington's House Sales data.</p>
+                        <!-- <ul>
+                            <li>
+                                Highlighted a <strong>177% surge</strong> in <Strong>domestic violence</Strong> over two decades, with a sharp rise post-2005.
+                            </li>
+                            <li>
+                                Revealed <strong>Uttar Pradesh</strong> accounted for <strong>25% of dowry deaths</strong> by 2021, the highest in India.
+                            </li>
+                            <li>
+                                Identified <strong>Maharashtra, Karnataka, Andhra Pradesh, and Tamil Nadu</strong> as contributors to over <strong>56% of women trafficking cases</strong>.
+                            </li>
+                        </ul> -->
+                        <div class="project-tech">
+                            <span class="tech-tag">Tableau</span>
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">Data Analysis</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Jai-Verma-04/washington-house-sales" target="_blank" class="btn btn-sm">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="https://public.tableau.com/app/profile/jai.verma6013/viz/HouseSalesWashington/HouseSales" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" data-category="tableau">
+                    <div class="project-image">
+                        <img src="assets/projects/British Airways.png" alt="british-airways-review">
+                    </div>
+                    <div class="project-content">
+                        <h3>British Airways Review Dashboard</h3>
+                        <p>Created a dashboard analyzing British Airway's Reviews from 2016 to 2024.</p>
+                        <!-- <ul>
+                            <li>
+                                Highlighted a <strong>177% surge</strong> in <Strong>domestic violence</Strong> over two decades, with a sharp rise post-2005.
+                            </li>
+                            <li>
+                                Revealed <strong>Uttar Pradesh</strong> accounted for <strong>25% of dowry deaths</strong> by 2021, the highest in India.
+                            </li>
+                            <li>
+                                Identified <strong>Maharashtra, Karnataka, Andhra Pradesh, and Tamil Nadu</strong> as contributors to over <strong>56% of women trafficking cases</strong>.
+                            </li>
+                        </ul> -->
+                        <div class="project-tech">
+                            <span class="tech-tag">Tableau</span>
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">Data Analysis</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Jai-Verma-04/british-airways-review" target="_blank" class="btn btn-sm">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="https://public.tableau.com/app/profile/jai.verma6013/viz/BritishAirwaysReview_17364013839900/ReviewsDashboard" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
                             </a>
                         </div>
                     </div>
@@ -90,18 +261,18 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-left">
-                    <p>© 2024 Your Name. All rights reserved.</p>
+                    <p>© 2024 Jai Verma. All rights reserved.</p>
                 </div>
                 <div class="footer-right">
                     <div class="social-links">
-                        <a href="https://github.com/yourusername" target="_blank">
+                        <a href="https://github.com/Jai-Verma-04" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank">
+                        <a href="https://linkedin.com/in/jai-verma" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="https://twitter.com/yourhandle" target="_blank">
-                            <i class="fab fa-twitter"></i>
+                        <a href="https://www.instagram.com/jai._.verma" target="_blank">
+                            <i class="fab fa-instagram"></i>
                         </a>
                     </div>
                 </div>
