--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,9 @@
             <a href="index.html" class="logo">Jai Verma<span class="accent">.</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#resume">Resume</a></li>
                 <li><a href="projects.html" class="active">Projects</a></li>
-                <!-- <li><a href="blog/">Blog</a></li> -->
+                <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
