--- a/projects.html
+++ b/projects.html
@@ -57,63 +57,69 @@
         <div class="container">
             <div class="projects-grid">
                 <!-- Project Card 1 -->
-                <div class="project-card" data-category="spss">
+                <div class="project-card" data-category="tableau">
                     <div class="project-image">
-                        <img src="assets/projects/crop yield.png" alt="crop-yield-analysis">
+                        <img src="assets/projects/Newsfeed analysis dashboard.png" alt="women-crime-dashbboard">
                     </div>
                     <div class="project-content">
-                        <span> July 2024 </span>
-                        <h3>Crop Yield Data Analysis</h3>
-                        <p>Created SPSS visualizations to uncover insights from the crop yield data of India.</p>
+                        <span>January 2025</span>
+                        <h3>Newsfeed Analysis Dashboard</h3>
+                        <p>Completed a comprehensive Newsfeed Analysis for the 365 Platform using Tableau, revealing critical user interaction patterns from January to May 2023.</p>
                         <ul>
                             <li>
-                                Demonstrated that <strong>Kharif and Rabi</strong> crops comprise over <Strong>70%</Strong> of India's total crop production.
+                                Conducted comprehensive data analysis of 365 Platform's newsfeed, examining <strong>45,000+</strong> user posts across 6 different subtypes from January to May 2023.
                             </li>
                             <li>
-                                Analysed a steep rise in <strong>Kerala</strong>'s crop area from <strong>1997 to 2000</strong>, then a <strong>28% decline</strong> from 2000 to 2020.
+                                Analyzed <strong>3,956</strong> total platform visitors.
+                            </li>
+                            <li>
+                                Identified <Strong>405</Strong> active newsfeed users.
+                            </li>
+                            <li>
+                                Calculated precise <strong>10.2%</strong> user engagement rate.
                             </li>
                         </ul>
                         <div class="project-tech">
-                            <span class="tech-tag">IBM SPSS</span>
-                            <span class="tech-tag">Microsoft Excel</span>
+                            <span class="tech-tag">Tableau</span>
+                            <span class="tech-tag">Data Visualization</span>
                             <span class="tech-tag">Data Analysis</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Jai-Verma-04/Crop-yield-analysis" target="_blank" class="btn btn-sm">
+                            <a href="https://github.com/Jai-Verma-04/newsfeed-analysis" target="_blank" class="btn btn-sm">
                                 <i class="fab fa-github"></i> Code
                             </a>
-                            <a href="https://github.com/Jai-Verma-04/Crop-yield-analysis/blob/main/OUTPUT.pdf" target="_blank" class="btn btn-sm">
+                            <a href="https://public.tableau.com/app/profile/jai.verma6013/viz/newsfeed_analysis_17369211140550/Newsfeedanalysisdashboard?publish=yes" target="_blank" class="btn btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Output
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="project-card" data-category="powerbi">
+                <div class="project-card" data-category="python">
                     <div class="project-image">
-                        <img src="assets/projects/Sales Insights.png" alt="sales-insights-dashboard">
+                        <img src="assets/projects/IPLAnalytica.png" alt="iplanalytica">
                     </div>
                     <div class="project-content">
-                        <span>August 2024</span>
-                        <h3>Sales Insights</h3>
-                        <p>Created a sales dashboard from MySQL database using PowerBI</p>
+                        <span>October - December 2024</span>
+                        <h3>IPLAnalytica - An IPL Web App</h3>
+                        <p>Created an IPL Analytics and dashboard app to view stats for players, teams, venues and seasons with the capability of generating a scorecard.</p>
                         <ul>
                             <li>
-                                Uncovered a <strong>42.3% sales decline</strong> in three years, with a notable dip in Q2 2020.
+                                The project provides insights into <strong>player and team performances, match statistics</strong>, and an added functionality to <strong>generate a scorecard</strong> for a particular match.
                             </li>
                             <li>
-                                Showcased that <strong>Delhi NCR and Mumbai</strong> generated <strong>70% of total revenue</strong>, indicating strong market demand
+                                The project is built upon the <strong>streamlit app framework</strong> to create a web app and data analysis of the IPL data using Python's <strong>Pandas library</strong>.
                             </li>
                         </ul>
                         <div class="project-tech">
-                            <span class="tech-tag">MySQL</span>
-                            <span class="tech-tag">PowerBI</span>
-                            <span class="tech-tag">Data Analysis</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Pandas</span>
+                            <span class="tech-tag">Streamlit</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Jai-Verma-04/sales-insights-dashboard" target="_blank" class="btn btn-sm">
+                            <a href="https://github.com/Jai-Verma-04/IPLAnalytica" target="_blank" class="btn btn-sm">
                                 <i class="fab fa-github"></i> Code
                             </a>
-                            <a href="https://github.com/Jai-Verma-04/sales-insights-dashboard/blob/main/OUTPUT.pdf" target="_blank" class="btn btn-sm">
+                            <a href="https://iplanalytica.streamlit.app/" target="_blank" class="btn btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Output
                             </a>
                         </div>
@@ -153,55 +159,78 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card" data-category="python">
+                <div class="project-card" data-category="powerbi">
                     <div class="project-image">
-                        <img src="assets/projects/IPLAnalytica.png" alt="iplanalytica">
+                        <img src="assets/projects/Sales Insights.png" alt="sales-insights-dashboard">
                     </div>
                     <div class="project-content">
-                        <span>October - December 2024</span>
-                        <h3>IPLAnalytica - An IPL Web App</h3>
-                        <p>Created an IPL Analytics and dashboard app to view stats for players, teams, venues and seasons with the capability of generating a scorecard.</p>
+                        <span>August 2024</span>
+                        <h3>Sales Insights</h3>
+                        <p>Created a sales dashboard from MySQL database using PowerBI</p>
                         <ul>
                             <li>
-                                The project provides insights into <strong>player and team performances, match statistics</strong>, and an added functionality to <strong>generate a scorecard</strong> for a particular match.
+                                Uncovered a <strong>42.3% sales decline</strong> in three years, with a notable dip in Q2 2020.
                             </li>
                             <li>
-                                The project is built upon the <strong>streamlit app framework</strong> to create a web app and data analysis of the IPL data using Python's <strong>Pandas library</strong>.
+                                Showcased that <strong>Delhi NCR and Mumbai</strong> generated <strong>70% of total revenue</strong>, indicating strong market demand
                             </li>
                         </ul>
                         <div class="project-tech">
-                            <span class="tech-tag">Tableau</span>
-                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">MySQL</span>
+                            <span class="tech-tag">PowerBI</span>
                             <span class="tech-tag">Data Analysis</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Jai-Verma-04/Women-Crime-Dashboard" target="_blank" class="btn btn-sm">
+                            <a href="https://github.com/Jai-Verma-04/sales-insights-dashboard" target="_blank" class="btn btn-sm">
                                 <i class="fab fa-github"></i> Code
                             </a>
-                            <a href="https://public.tableau.com/app/profile/jai.verma6013/viz/CrimeonWomen/Dashboard" target="_blank" class="btn btn-sm">
+                            <a href="https://github.com/Jai-Verma-04/sales-insights-dashboard/blob/main/OUTPUT.pdf" target="_blank" class="btn btn-sm">
                                 <i class="fas fa-external-link-alt"></i> Output
                             </a>
                         </div>
                     </div>
                 </div>
+                
+                <div class="project-card" data-category="spss">
+                    <div class="project-image">
+                        <img src="assets/projects/crop yield.png" alt="crop-yield-analysis">
+                    </div>
+                    <div class="project-content">
+                        <span> July 2024 </span>
+                        <h3>Crop Yield Data Analysis</h3>
+                        <p>Created SPSS visualizations to uncover insights from the crop yield data of India.</p>
+                        <ul>
+                            <li>
+                                Demonstrated that <strong>Kharif and Rabi</strong> crops comprise over <Strong>70%</Strong> of India's total crop production.
+                            </li>
+                            <li>
+                                Analysed a steep rise in <strong>Kerala</strong>'s crop area from <strong>1997 to 2000</strong>, then a <strong>28% decline</strong> from 2000 to 2020.
+                            </li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="tech-tag">IBM SPSS</span>
+                            <span class="tech-tag">Microsoft Excel</span>
+                            <span class="tech-tag">Data Analysis</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Jai-Verma-04/Crop-yield-analysis" target="_blank" class="btn btn-sm">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="https://github.com/Jai-Verma-04/Crop-yield-analysis/blob/main/OUTPUT.pdf" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="project-card" data-category="tableau">
                     <div class="project-image">
                         <img src="assets/projects/House Sales.png" alt="washington-house-sales">
                     </div>
                     <div class="project-content">
+                        <span>June 2024</span>
                         <h3>Washington House Sales Dashboard</h3>
                         <p>Created a dashboard analyzing Washington's House Sales data.</p>
-                        <!-- <ul>
-                            <li>
-                                Highlighted a <strong>177% surge</strong> in <Strong>domestic violence</Strong> over two decades, with a sharp rise post-2005.
-                            </li>
-                            <li>
-                                Revealed <strong>Uttar Pradesh</strong> accounted for <strong>25% of dowry deaths</strong> by 2021, the highest in India.
-                            </li>
-                            <li>
-                                Identified <strong>Maharashtra, Karnataka, Andhra Pradesh, and Tamil Nadu</strong> as contributors to over <strong>56% of women trafficking cases</strong>.
-                            </li>
-                        </ul> -->
                         <div class="project-tech">
                             <span class="tech-tag">Tableau</span>
                             <span class="tech-tag">Data Visualization</span>
@@ -222,19 +251,9 @@
                         <img src="assets/projects/British Airways.png" alt="british-airways-review">
                     </div>
                     <div class="project-content">
+                        <span>June 2024</span>
                         <h3>British Airways Review Dashboard</h3>
                         <p>Created a dashboard analyzing British Airway's Reviews from 2016 to 2024.</p>
-                        <!-- <ul>
-                            <li>
-                                Highlighted a <strong>177% surge</strong> in <Strong>domestic violence</Strong> over two decades, with a sharp rise post-2005.
-                            </li>
-                            <li>
-                                Revealed <strong>Uttar Pradesh</strong> accounted for <strong>25% of dowry deaths</strong> by 2021, the highest in India.
-                            </li>
-                            <li>
-                                Identified <strong>Maharashtra, Karnataka, Andhra Pradesh, and Tamil Nadu</strong> as contributors to over <strong>56% of women trafficking cases</strong>.
-                            </li>
-                        </ul> -->
                         <div class="project-tech">
                             <span class="tech-tag">Tableau</span>
                             <span class="tech-tag">Data Visualization</span>
