--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,40 @@
         <div class="container">
             <div class="projects-grid">
                 <!-- Project Card 1 -->
+                <div class="project-card" data-category="powerbi">
+                    <div class="project-image">
+                        <img src="assets/projects/NVDA.png" alt="women-crime-dashbboard">
+                    </div>
+                    <div class="project-content">
+                        <span>January 2025</span>
+                        <h3>NVDA Stock Analysis Dashboard</h3>
+                        <p>Developed a comprehensive Stock Performance Analysis Dashboard for NVIDIA Corporation (NVDA) using Power BI, showcasing critical market trends and technical indicators.</p>
+                        <ul>
+                            <li>
+                                Analyzed historical stock data spanning from 1999 to 2024, covering <strong>25+ years</strong> of NVIDIA's market performance
+                            </li>
+                            <li>
+                                Implemented advanced technical indicators including <strong>RSI (Relative Strength Index)</strong> and Moving Averages
+                            </li>
+                            <li>
+                                <a style="color: white" href="https://www.kaggle.com/datasets/aryan0015/nvidia-stock-data-nvda?resource=download"> View Data source</a>
+                            </li>
+                        </ul>
+                        <div class="project-tech">
+                            <span class="tech-tag">PowerBI</span>
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">Data Analysis</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Jai-Verma-04/NVDA-Analysis" target="_blank" class="btn btn-sm">
+                                <i class="fab fa-github"></i> Code
+                            </a>
+                            <a href="https://github.com/Jai-Verma-04/NVDA-Analysis/blob/main/OUTPUT.pdf" target="_blank" class="btn btn-sm">
+                                <i class="fas fa-external-link-alt"></i> Output
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="project-card" data-category="tableau">
                     <div class="project-image">
                         <img src="assets/projects/Newsfeed analysis dashboard.png" alt="women-crime-dashbboard">
